# MSF2CSV

./: README.md  SIGMA_Infamously_Strange-pivot-all-20230731-0111.html  Sample Output.csv  Sample Pivot-20230815-all.html  Sample Pivot-all.html  Sample Pivot-gamma.html  Sample Pivot-incursion.html  Sample_Output-pivot-all.html  __init__.py  alliance_block.py  alliance_info.py  alliance_options.py  bot.py  cached_data  cached_info.py  char_info.py  driver_pool.py  extract_traits.py  file_io.py  generate_alliance_info.py  generate_by_char.py  generate_css.py  generate_csv.py  generate_html.py  generate_local_files.py  generate_roster_analysis.py  generate_strike_teams.py  generate_summary.py  generate_table.py  generate_zone_analysis.py  gradients.py  html_cache.py  html_shared.py  index.html  log_utils.py  login.py  lookup_alliance.py  msf2csv.py  msf_api.py  msf_shared.py  (+16 more)
Samples/: SIGMA_GOLD-20230927-incur.html  Sample with Hist-20230923-incur.html  Sample-20230922-incur.html  Sample-20230927-incur.html  Sample-20231004-all.html  Sample-20231004-incur.html  Sample-20231004-war.html  Sample-20231009-incur.html  Sample-all.html  Sample-dd6.html  Sample-gamma.html  Sample-incur.html  Sample-incur2.html  Sample-old_incur.html  Sample-teams.html  Sample-war.html  index.html  test-incur.html
samples/: SIGMA Infamously Strange-20230914-all.html  SIGMA Infamously Strange-20230914-gamma.html  SIGMA Infamously Strange-20230914-war.html
